WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
213370
Failure the case of "null type Blob slice" in wpt/FileAPI/blob/Blob-slice.html
https://bugs.webkit.org/show_bug.cgi?id=213370
Summary
Failure the case of "null type Blob slice" in wpt/FileAPI/blob/Blob-slice.html
Tetsuharu Ohzeki [UTC+9]
Reported
2020-06-19 03:28:15 PDT
https://wpt.fyi/results/FileAPI/blob/Blob-slice.html?label=experimental&label=master&aligned
Attachments
Patch
(4.32 KB, patch)
2020-06-19 03:31 PDT
,
Tetsuharu Ohzeki [UTC+9]
no flags
Details
Formatted Diff
Diff
Patch
(7.48 KB, patch)
2020-06-21 08:11 PDT
,
Tetsuharu Ohzeki [UTC+9]
no flags
Details
Formatted Diff
Diff
Patch
(7.45 KB, patch)
2020-06-22 07:44 PDT
,
Tetsuharu Ohzeki [UTC+9]
no flags
Details
Formatted Diff
Diff
Show Obsolete
(2)
View All
Add attachment
proposed patch, testcase, etc.
Tetsuharu Ohzeki [UTC+9]
Comment 1
2020-06-19 03:31:04 PDT
Created
attachment 402274
[details]
Patch
Sam Weinig
Comment 2
2020-06-20 10:56:23 PDT
Probably just need to update the mac test and results for http/tests/local/fileapi/send-sliced-dragged-file.html by hand.
Tetsuharu Ohzeki [UTC+9]
Comment 3
2020-06-21 08:08:41 PDT
Sam, thank you advice!
Tetsuharu Ohzeki [UTC+9]
Comment 4
2020-06-21 08:11:51 PDT
Created
attachment 402426
[details]
Patch I addressed failures on mac-wk1
Darin Adler
Comment 5
2020-06-21 13:27:11 PDT
Comment on
attachment 402426
[details]
Patch View in context:
https://bugs.webkit.org/attachment.cgi?id=402426&action=review
> Source/WebCore/fileapi/Blob.idl:45 > + Blob slice(optional long long start = 0, > + optional long long end = 0x7FFFFFFFFFFFFFFF, > + optional DOMString contentType = "");
My preferences would be to not format like this -- in WebKit we normally don’t intent to line up with open parenthesis and it seems we could leave this as a long line. That would have the advantage of having an easy to read diff. But maybe this is just pasted from the specification text?
Tetsuharu Ohzeki [UTC+9]
Comment 6
2020-06-21 16:51:50 PDT
(In reply to Darin Adler from
comment #5
)
> Comment on
attachment 402426
[details]
> Patch > > View in context: >
https://bugs.webkit.org/attachment.cgi?id=402426&action=review
> > > Source/WebCore/fileapi/Blob.idl:45 > > + Blob slice(optional long long start = 0, > > + optional long long end = 0x7FFFFFFFFFFFFFFF, > > + optional DOMString contentType = ""); > > My preferences would be to not format like this -- in WebKit we normally > don’t intent to line up with open parenthesis and it seems we could leave > this as a long line. That would have the advantage of having an easy to read > diff. But maybe this is just pasted from the specification text?
Yes. Certainly, I tweaked a indent a bit but I copied from the spec basically.
https://w3c.github.io/FileAPI/#blob-section
Tetsuharu Ohzeki [UTC+9]
Comment 7
2020-06-22 07:44:58 PDT
Created
attachment 402471
[details]
Patch I addressed the review point about an indent in idl file
Tetsuharu Ohzeki [UTC+9]
Comment 8
2020-06-22 07:48:04 PDT
Thank you, Darin!
EWS
Comment 9
2020-06-22 09:34:19 PDT
Committed
r263353
: <
https://trac.webkit.org/changeset/263353
> All reviewed patches have been landed. Closing bug and clearing flags on
attachment 402471
[details]
.
Radar WebKit Bug Importer
Comment 10
2020-06-22 09:35:23 PDT
<
rdar://problem/64598895
>
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug