Fix the case of "null type Blob slice" in wpt/FileAPI/blob/Blob-slice.html https://bugs.webkit.org/show_bug.cgi?id=213370

Patch by Tetsuharu Ohzeki <tetsuharu.ohzeki@gmail.com> on 2020-06-22
Reviewed by Darin Adler.

LayoutTests/imported/w3c:

* web-platform-tests/FileAPI/blob/Blob-slice-expected.txt:

Source/WebCore:

* fileapi/Blob.h:
(WebCore::Blob::slice const):
Remove unnecessary default arguments
These default arguments are introduced in r83873
but we don't need them because WebIDL binding handles them.

* fileapi/Blob.idl:
- Update the definition of `Blob.slice()` to match the latest spec.
  https://w3c.github.io/FileAPI/#blob-section

- We should use empty string as a default value by step 4-a of
  https://w3c.github.io/FileAPI/#dfn-slice

- In the previous code, we use `optional DOMString?` for the
  _contentType_ arguments for `Blob.slice()`.
  Then, our codegen generates a code which uses `convert<IDLNullable<IDLDOMString>>`
  and it returns `String()` if the JS value is `null`.
  This caused the failure case in this change.

LayoutTests:

* http/tests/local/fileapi/send-sliced-dragged-file-expected.txt:
* http/tests/local/fileapi/send-sliced-dragged-file.html:

Canonical link: https://commits.webkit.org/226259@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@263353 268f45cc-cd09-0410-ab3c-d52691b4dbfc