Source/WebCore/fileapi/Blob.h
@@ -101,7 +101,7 @@ public:
     // URLRegistrable
     URLRegistry& registry() const override;
 
-    Ref<Blob> slice(long long start = 0, long long end = std::numeric_limits<long long>::max(), const String& contentType = String()) const
+    Ref<Blob> slice(long long start, long long end, const String& contentType) const
     {
         return adoptRef(*new Blob(m_internalURL, start, end, contentType));
     }
